# Moving2

./: .gitignore  .gitmodules  ColorTypes.hpp  Project Overview.md  Protocol 14th May  Python Coder Style  README.md  README_SETUP.md  demo.cpp  demo2.cpp  readme.md  remote_demo3.cpp  requirements.txt  transfer.sh
Bq/: bq_pseudo.py  sampling_pseudo.py
Coding_Style/: Python Code Style.md
buildhat_firmware/: how to use buildhat_firmware
catch_example/: Reinforcement Learning_ How to Train an RL Agent from Scratch _ by Team Datatonic _ ${around_the_block}.html
code/: Data_Collection_Guidelines.md  Main.py  Q_table.npy  data_processing.py  env.py  main.py  syth_all.py  tempCodeRunnerFile.py  test.py
documentation/: integration_protocol submssion.txt
examples/: Plan for remote control  demo.cpp
hardware/: README.md
hardware/code/libraries/buildhat++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.md
hardware/code/libraries/buildhat++/examples/: calibrate_colors.cpp  color_test_2.cpp  drive_and_color_example.cpp  drive_and_distance_example.cpp  drive_one_second.cpp
hardware/code/libraries/buildhat++/examples/moving2_src/: Q_table.csv  agent_rpi.cpp  drive_all_test.cpp
hardware/code/libraries/buildhat++/examples/moving2_src/test/: data0.csv  data1.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data7.csv  data8.csv  data9.csv
hardware/code/libraries/buildhat++/examples/moving2_src/test/Agenttests/: argmaxtest  argmaxtest.cpp  argmaxtest.h  get_color_test  get_color_test.cpp  get_color_test.h  get_distance_test  get_distance_test.cpp  get_distance_test.h  getsensorreadings_test  getsensorreadings_test.cpp  getsensorreadings_test.h
hardware/code/libraries/buildhat++/src/: BuildHat.cpp  BuildHat.hpp  config.hpp
hardware/code/libraries/buildhat++/src/functions/: Drive.cpp  Drive.hpp
hardware/code/libraries/buildhat++/src/modules/actuators/: Motor.cpp  Motor.hpp
hardware/code/libraries/buildhat++/src/modules/sensors/: ColorSensor.cpp  ColorSensor.hpp  ColorTypes.cpp  ColorTypes.hpp  DistanceSensor.cpp  DistanceSensor.hpp
hardware/code/libraries/buildhat++/src/utils/: Utilities.cpp  Utilities.hpp
rl/: README.md  bq_pseudo.py  (+2 more)
(+166 files in other folders)
